--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <body>
-<h1>Hello there!</h1>
-      <P>uwuwuwuw</P>
+    <body sytle="background-color:black;">
+<h1 style="color:white;">Hello there!</h1>
+      
     </body>
 
 
