--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <body sytle="background-color:black;">
-<h1 style="color:white;">Hello there!</h1>
-      
-    </body>
-
-
-  
-</html>
+<body style="background-color:black;">.</body>
+<h1 style="color:white;text-align:center;">Hello</h1>
