--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <html>
-<body style="background-color:black;">.</body>
+<body style="background-color:black;">hello</body>
 <h1 style="color:white;text-align:center;">Hello</h1>
