--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
 <html>
 <body style="background-color:black;">hello</body>
+  <img src="docs/assets/images/blue.png" alt="HTML5 Icon" style="width:128px;height:128px;">
 <h1 style="color:white;text-align:center;">Hello</h1>
+</html>
