--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
-<body style="background-color:black;">hello</body>
-  <img src="docs/assets/images/blue.png" alt="HTML5 Icon" style="width:240px;height:180px;">
+<style>
+  body { 
+  background-color: src="docs/assets/images/blue.png";
+  }
+  <img src="docs/assets/images/blue.png" alt="Bubery" style="width:240px;height:180px;">
 <h1 style="color:white;text-align:center;">Hello</h1>
-</html>
+</style>
+    </html>
