--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <style>
   body { 
-  background-color: src="docs/assets/images/blue.png";
+  background-color: url("/docs/assets/images/blue.png")
   }
   <img src="docs/assets/images/blue.png" alt="Bubery" style="width:240px;height:180px;">
 <h1 style="color:white;text-align:center;">Hello</h1>
