--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html>
 <style>
-  body { 
-  background-color: url("/docs/assets/images/blue.png")
-  }
+  <body>
   <img src="docs/assets/images/blue.png" alt="Bubery" style="width:240px;height:180px;">
 <h1 style="color:white;text-align:center;">Hello</h1>
 </style>
+</body>
     </html>
