--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
-<style>
-  <body>
+  <body style="background-color:black;">
   <img src="docs/assets/images/blue.png" alt="Bubery" style="width:240px;height:180px;">
 <h1 style="color:white;text-align:center;">Hello</h1>
-</style>
 </body>
     </html>
