--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
         <img src="docs/assets/images/blue.png" alt="Bubery" style="width:120px;height:90px;">
         <img src="docs/assets/images/blue.png" alt="Bubery" style="width:120px;height:90px;">
         <img src="docs/assets/images/blue.png" alt="Bubery" style="width:120px;height:90px;">
+        <img src="docs/assets/images/blue.png" alt="Bubery" style="width:120px;height:90px;">
+        <img src="docs/assets/images/blue.png" alt="Bubery" style="width:120px;height:90px;">
+        <img src="docs/assets/images/blue.png" alt="Bubery" style="width:120px;height:90px;">
+        <img src="docs/assets/images/blue.png" alt="Bubery" style="width:120px;height:90px;">
+        <img src="docs/assets/images/blue.png" alt="Bubery" style="width:120px;height:90px;">
 </body>
     </html>
