--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <body style="background-color:black;">
-<h1 style="color:white;text-align:center;">Hello</h1>
-    <img src="docs/assets/images/blue.png" alt="Bubery" style="width:900px;height:200px;">
-
+<h1 style="color:white;text-align:center;">Blueberry</h1>
+<h1 style="color:Black;font-size:1000px;">...........</h1>
+    
 </body>
     </html>
