--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!doctype html>
+<!--Home menu code here-->
+<!DOCTYPE html>
+
 <html>
+<title>Synthifi Studios - Home</title>
   <body style="background-color:black;">
 <h1 style="color:white;text-align:center;">Blueberry</h1>
-<h1 style="color:Black;font-size:1000px;">...........</h1>
-    
 </body>
     </html>
