--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 
 <html>
-<title>Synthifi Studios - Home</title>
+<title>FLIPSIED Studios - Home</title>
   <body style="background-color:black;">
 <h1 style="color:white;text-align:center;">Blueberry</h1>
 </body>
