--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <html>
 <title>FLIPSIED Studios - Home</title>
   <body style="background-color:black;">
-<h1 style="color:white;text-align:center;">Blueberry</h1>
+<h1 style="color:white;text-align:center;font-size:100px;font-family:monaco;">FLIPSIED STUDIOS</h1>
 </body>
     </html>
