--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <title>FLIPSIED Studios - Home</title>
   <body style="background-color:black;">
 <h1 style="color:white;text-align:center;font-size:100px;font-family:monaco;">FLIPSIED STUDIOS</h1>
-</body>
+<a href="https://flipsied.github.io/about/" target="_blank">About</a><br>
+  </body>
     </html>
