--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>FLIPSIED Studios - Home</title>
   <body style="background-color:black;">
 <h1 style="color:white;text-align:center;font-size:100px;font-family:monaco;">FLIPSIED STUDIOS</h1>
-<a href="https://flipsied.github.io/about/" target="_blank">About</a><br>
+<a href="https://flipsied.github.io/about/" target="_blank" style="color:white;font-size:25px;text-align:center;font-family:monaco;">About</a><br>
   </body>
     </html>
