--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <body style="background-color:black;">
 <h1 style="color:white;text-align:center;font-size:100px;font-family:monaco;">FLIPSIED STUDIOS</h1>
           <p style="font-size:50px;">..</p>
-    <p style="color:white;">Lorem Ipsum Dor Sit Amet</p>
-          <p style="font-size:50px;">   </p>
+    <p style="color:white;text-align:center;">Lorem Ipsum Dor Sit Amet</p>
+          <p style="font-size:100px;">..</p>
       <p style="color:white;text-align:center;font-family:monaco;">Lorem Ipsum Dor Sit Amet</p>
 
 
